tests/baselines/reference/parserConstructorDeclaration9.errors.txt
==== tests/cases/compiler/parserConstructorDeclaration9.ts (1 errors) ====
    class C {
      constructor<T>() { }
                 ~~~
!!! parserConstructorDeclaration9.ts(2,14): error TS1092: Type parameters cannot appear on a constructor declaration.
    }